--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ however it also contains an experimental support of mamalian-scaled ones.</p>
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Latest version: 0.3 beta (Jun 22 2014)</p>
+<p>Latest version: 1.0 (Aug 08 2014)</p>
 
 <p>Read detailed installation instructions <em><a href="install.html">here</a></em>.</p>
 
@@ -82,8 +82,8 @@ Sciences)</li>
 
 <ul>
 <li>Mikhail Kolmogorov, Brian Raney, Benedict Paten, and Son Pham. 
-"Ragout: A reference-assisted assembly tool for bacterial genomes" 
-(accepted to ISMB 2014)</li>
+"Ragout: A reference-assisted assembly tool for bacterial genomes",
+Bioinformatics, 2014</li>
 </ul><h2>
 <a name="ismb-2014-supplementary" class="anchor" href="#ismb-2014-supplementary"><span class="octicon octicon-link"></span></a>ISMB 2014 supplementary</h2>
 
