--- a/usage.html
+++ b/usage.html
@@ -35,11 +35,11 @@
 
         <section id="main_content">
 
-<h1>Usage instructions for Ragout</h1>
-<pre><code>Usage: ragout.py [-h] [-o OUTPUT_DIR] [-s {sibelia,cactus,maf}] [--refine]
+<h1 id="usage-instructions-for-ragout">Usage instructions for Ragout</h1>
+<pre><code>Usage: ragout.py [-h] [-o OUTPUT_DIR] [-s {sibelia,cactus,maf}] [--no-refine]
                  [--overwrite] [--debug] [--version]
-                 recipe_file</code></pre>
-<p>Supported arguments:</p>
+                 recipe_file
+</code></pre><p>Supported arguments:</p>
 <pre><code>positional arguments:
   recipe_file           path to recipe file
 
@@ -50,51 +50,79 @@ optional arguments:
   -s {sibelia,cactus,maf}, --synteny {sibelia,cactus,maf}
                         which tool to use for synteny block decomposition.
                         (default: sibelia)
-  --refine              refine with the assembly graph (default: False)
+  --no-refine           disable refinement with assembly graph (default: False)
   --overwrite           overwrite existing Sibelia/Cactus results (default:
                         False)
   --debug               enable debug output (default: False)
-  --version             show program&#39;s version number and exit</code></pre>
-<h2>Examples</h2>
+  --version             show program&#39;s version number and exit
+</code></pre><h2 id="examples">Examples</h2>
 <p>You can try Ragout on the provided ready-to-use examples:</p>
-<pre><code>python ragout.py examples/E.Coli/ecoli.rcp --outdir examples/E.Coli/out/ --refine
-python ragout.py examples/H.Pylori/helicobacter.rcp --outdir examples/H.Pylori/out/ --refine
-python ragout.py examples/S.Aureus/aureus.rcp --outdir examples/S.Aureus/out/ --refine
-python ragout.py examples/V.Cholerea/cholerea.rcp --outdir examples/V.Cholerae/out/ --refine</code></pre>
-<h2>Input data</h2>
-<p>Ragout takes as input contigs from a short-read assembly. We preformed our tests with
-SPAdes, ABySS and SOAPdenovo assemblers, however Ragout should work with others,
-if their output satisfy the following conditions:</p>
+<pre><code>python ragout.py examples/E.Coli/ecoli.rcp --outdir examples/E.Coli/out/
+python ragout.py examples/H.Pylori/helicobacter.rcp --outdir examples/H.Pylori/out/
+python ragout.py examples/S.Aureus/aureus.rcp --outdir examples/S.Aureus/out/
+python ragout.py examples/V.Cholerae/cholerae.rcp --outdir examples/V.Cholerae/out/
+</code></pre><h2 id="sequence-data">Sequence data</h2>
+<p>Ragout takes as input contigs from a short-read assembly. We performed
+our tests with SPAdes, ABySS and SOAPdenovo assemblers, others should
+work fine too, if their output satisfy the following conditions:</p>
 <ul>
-<li>The contigs should cover the most fraction of the genome and should not overlap
-(except ends, see below)</li>
-<li>One should use <em>all</em> contigs/scaffolds output by assembler</li>
-<li>For the better performance of refinment module, contigs that were connected in
-a graph used by assembler should overlap on a certain constant value (k-mer or
-(k-1)-mer usually). For the most of assemblers which utilize de Bruijn graphs
-this holds true. Currently, support of other types of assembler (such as SGA)
-is not perfect (for refinement module only, other parts of Ragout work fine).</li>
+<li>Assembly coverage should be acceptable (80-90%+) and contigs/scaffolds
+should not overlap (except by ends, see below)</li>
+<li><em>All</em> contigs/scaffolds output by assembler should be used (including
+short ones)</li>
+<li>For the better performance of the refinment module, contigs/scaffolds
+that were connected in a graph used by assembler should overlap on a
+certain constant value (usully k-mer or (k-1)-mer). This holds true
+for the most of assemblers which utilize de Bruijn graphs. Currently,
+for other types of assemblers (such as SGA) support of
+refinement procedure is limited.</li>
 </ul>
-<h2>Algorithm overview</h2>
+<h2 id="algorithm-overview">Algorithm overview</h2>
 <p>This is a very brief description of the algorithm. See our paper 
 for the detailed explanation.</p>
 <p>Ragout works with genomes represented as sequences of synteny blocks
-and firstly uses <em>Sibelia</em> for this decomposition. 
-Next, Ragout assembles contigs into scaffolds using a breakpoint graph.</p>
-<p>This procedure is repeated multiple times with the different size
-of synteny block decomposition. Afterwards, an optional refinement
-step with assembly (overlap) graph is performed (if --refine was specified).</p>
-<h2>Input</h2>
+and firstly uses <em>Sibelia</em> or local multiple sequence alignment
+for this decomposition. </p>
+<p>Next, Ragout constructs a breakpoint graph and predicts missing 
+adjacencies between synteny blocks in target genome (as it is fragmented
+into contigs, some adjacencies are missing). Then, contigs are being 
+extended into scaffolds with respect to inferred adjacencies. This 
+procedure is repeated multiple times with the different scale of synteny
+block decomposition. </p>
+<p>Afterwards, a refinement step is performed. Ragout utilize assembly (overlap) 
+graph which is reconstructed by overlapping input contigs/scaffolds. This 
+helps to insert very short/repetitive contigs into the assembly.</p>
+<h2 id="input">Input</h2>
 <p>Ragout takes as input:</p>
 <ul>
 <li>Reference genomes in <em>FASTA</em> format</li>
-<li>Target (assembling) genome in <em>FASTA</em> format (a set of contigs)</li>
-<li>Phylogenetic tree for both reference and target genomes in <em>NEWICK</em> format</li>
-<li>Minimum synteny block size (in multiple scales)</li>
+<li>Target genome in <em>FASTA</em> format (a set of contigs/scaffolds)</li>
+<li>Phylogenetic tree containing reference and target genomes in <em>NEWICK</em> format</li>
+<li>Synteny block sizes (in multiple scales)</li>
 </ul>
 <p>All these parameters should be described in a single recipe file.
 See the example of such file below.</p>
-<h2>Recipe file</h2>
+<h2 id="output">Output</h2>
+<p>After running Ragout, an output directory will contain:</p>
+<ul>
+<li><strong>scaffolds.links</strong>: detailed description of adjacencies</li>
+<li><strong>scaffolds.fasta</strong>: scaffolds sequences</li>
+<li><strong>scaffolds_refined.links</strong>: contigs order after refinement (if --refine was specified)</li>
+<li><strong>scaffolds_refined.fasta</strong>: adjacencies description after refinement (if --refine was specified)</li>
+</ul>
+<h2 id="links-file">Links file</h2>
+<p>Ragout outputs information about generated adjacencies in &quot;*.links&quot; file.
+It is organized as a table for each scaffold and includes values described below:</p>
+<ul>
+<li><strong>contig_1</strong> : first contig in adjacency</li>
+<li><strong>contig_2</strong> : second contig in adjacency</li>
+<li><strong>gap</strong> : estimated gap between contigs</li>
+<li><strong>ref_support</strong> : reference genomes that support this adjacency</li>
+<li><strong>~&gt;</strong> : indicates that this adjacency was generated during the refinement procedure</li>
+</ul>
+<p>Gap &lt; 0 means overlap on corresponding value. &quot;~&gt;&quot; does not
+apply for assemblies without refinement.</p>
+<h2 id="recipe-file">Recipe file</h2>
 <p>If you want to cook Ragout, you need to write a recipe first.
 Here is an example of such recipe file:</p>
 <pre><code>.tree = (rf122:0.02,(((usa:0.01,col:0.01):0.01,jkd:0.04):0.005,n315:0.01):0.01);
@@ -107,108 +135,138 @@ col.fasta = references/COL.fasta
 jkd.fasta = references/JKD6008.fasta
 rf122.fasta = references/RF122.fasta
 n315.fasta = references/N315.fasta
-usa.fasta = usa300_contigs.fasta</code></pre>
-<p>or, if using <em>MAF</em> as input:</p>
+usa.fasta = usa300_contigs.fasta
+</code></pre><p>or, if using <em>MAF</em> as input:</p>
 <pre><code>.tree = (miranda:0.04,(yakuba:0.12,(melanogaster:0.04,simulans:0.04):0.08):0.15);
 .target = yakuba
 .maf = genomes/alignment.maf
 .blocks = 5000, 500
 
-yakuba.fasta = genomes/D.yakuba_contigs.fasta</code></pre>
-<h3>Parameters description:</h3>
+yakuba.fasta = genomes/D.yakuba_contigs.fasta
+</code></pre><h3 id="parameters-description-">Parameters description:</h3>
 <p>Each parameter could be &quot;global&quot; or &quot;local&quot; (for a particular genome).
 Global parameters start from dot:</p>
-<pre><code>.global_param_name = value</code></pre>
-<p>To set local parameter, use:</p>
-<pre><code>genome_name.param_name = value</code></pre>
-<h3>Global parameters</h3>
+<pre><code>.global_param_name = value
+</code></pre><p>To set local parameter, use:</p>
+<pre><code>genome_name.param_name = value
+</code></pre><h3 id="global-parameters">Global parameters</h3>
 <ul>
 <li><strong>tree</strong>: phylogenetic tree in NEWICK format [required]</li>
 <li><strong>target</strong>: target genome name [required]</li>
 <li><strong>blocks</strong>: comma-separated list of minimum synteny block sizes [required]</li>
-<li><strong>maf</strong>: path to multiple alignment in <em>MAF</em> format [default = not set]</li>
+<li><strong>maf</strong>: path to local multiple sequence alignment in <em>MAF</em> format [default = not set]</li>
 </ul>
-<h3>Local parameters</h3>
+<h3 id="local-parameters">Local parameters</h3>
 <ul>
 <li><strong>fasta</strong>: path to <em>FASTA</em> with genomic sequences [default = not set]</li>
 <li><strong>circular</strong>: indicates that reference chromosomes are circular [default = false]</li>
-<li><strong>draft</strong>: indicated that reference is in draft form (contigs/scaffolds) [default = false]</li>
+<li><strong>draft</strong>: indicates that reference is in draft form (contigs/scaffolds) [default = false]</li>
 </ul>
-<h3>Default values</h3>
-<p>You can change default values for local parameters assigning parameter 
-value to the special &quot;star&quot; object.
+<h3 id="default-values">Default values</h3>
+<p>You can change default values for local parameters by assigning the 
+parameter value to the special &quot;star&quot; object.
 For instance, if all input references except one are in draft form, you can write:</p>
 <pre><code>*.draft = true
-complete_ref.draft = false</code></pre>
-<h3>Detailed description</h3>
-<p>Genomes names are picked form the terminal nodes of the phylogenetic tree.
-All those names should be uniqe. If the branch length is ommited, it would be set to 1.</p>
-<p>Paths to <em>FASTA</em>/<em>MAF</em> can be both relative and absolute. Running with Sibelia requires
-all sequence headers among ALL <em>FASTA</em> files to be unique.</p>
+complete_ref.draft = false
+</code></pre><h3 id="detailed-description">Detailed description</h3>
+<p>Genomes are picked form the terminal nodes of the phylogenetic tree.
+All those names should be uniqe. If the branch length is ommited, it would
+be set to 1.</p>
+<p>Paths to <em>FASTA</em>/<em>MAF</em> can be both relative and absolute. Running with 
+Sibelia requires all sequence headers among ALL <em>FASTA</em> files to be unique.</p>
 <p>Ragout firstly decomposes genomes into set of synteny blocks.
 You can use either a set of <em>FASTA</em> files corresponding to each input genome
-or multiple alignment of all the genomes in <em>MAF</em> format.
+or local multiple alignment of all the genomes in <em>MAF</em> format.
 In both cases you should specify target&#39;s <em>FASTA</em> since it will be
 used to generate output. See &quot;Synteny backends&quot; section for more information.</p>
-<h2>Output files</h2>
-<p>After running Ragout, an output directory will contain:</p>
-<ul>
-<li>&quot;scaffolds.ord&quot; with a resulting order of contigs</li>
-<li>&quot;scaffolds.fasta&quot; with scaffold sequences (contigs are separated by 11 Ns)</li>
-<li>&quot;scaffolds_refined.ord&quot; with a contigs order after refinement (if --refine was specified)</li>
-<li>&quot;scaffolds_refined.fasta&quot; with refined scaffold sequences (if --refine was specified)</li>
-</ul>
-<h2>Synteny backends</h2>
-<p>Ragout have three different options for synteny block decomposition:</p>
-<ul>
-<li>Decompoition with <em>Sibelia</em></li>
-<li>Decomposition with <em>progressiveCactus</em></li>
-<li>Use of finished alignment in <em>MAF</em> format</li>
-</ul>
-<p>You can choose between backends by specifying --synteny (-s) option.
-If you use <em>Sibelia</em> or <em>progressiveCactus</em>, you should specify separate <em>FASTA</em>
-file for each input genome, while if you work with <em>MAF</em>, you should set
-only a path to <em>MAF</em> itself and a path to targset&#39;s <em>FASTA</em> (see below).</p>
-<h3>Sibelia</h3>
-<p>&quot;Sibelia&quot; option is set by default and is recommended for small genomes (like bacterial ones).
-The tools should be installed in your system -- see docs/INSTALL.md for detailed instructions.</p>
-<h3>progressiveCactus</h3>
-<p>&quot;progressiveCactus&quot; can be used for bigger genomes, up to multuple mammalian species.
-Please note, that current implementation is still experimental. The tool also 
-should be properly installed. Do not forget to mask repeats (with RepeatMasker, for instance)
-before applying progressiveCactus to genomes with a big fraction of repetitive sequences.</p>
-<h3>alignment in <em>MAF</em> format</h3>
-<p>If you already have a multiple alignment, you also can use it for synteny blocks decomposition.
-Alignment should be in <em>MAF</em> format and sequence names should follow UCSC notation:</p>
-<pre><code>genome_name.sequence_name</code></pre>
-<p>In case you are working with <em>MAF</em> input you should not specify <em>FASTA</em> files for references.
-All you need is to set <em>FASTA</em> for target genome (which will be used for output generation).</p>
-<h2>The parameters choice</h2>
-<h3>Minimum synteny block size</h3>
+<h2 id="the-parameters-choice">The parameters choice</h2>
+<h3 id="minimum-synteny-block-size">Minimum synteny block size</h3>
 <p>Because the decomposition procedure is parameter-dependent, the assembly
 is performed in multiple iterations with different synteny block
 scale. Intuitively, the algorithm firstly considers only contigs
-that are long enough and then puts shorter ones into the analysis.</p>
+that are long enough and then insert shorter ones in the assembly.</p>
 <p>For bacterial genomes, we recommend to run Ragout in three
 iterations with the block size equal to 5000, 500, 100.
 However, you can specify our own configuration which better
 describes your dataset.</p>
-<h3>Phylogenetic tree</h3>
+<h3 id="phylogenetic-tree">Phylogenetic tree</h3>
 <p>Running with multiple references, the output of Ragout may highly
 depend of the given phylogenetic tree and can be biased if
 the tree is incorrect.</p>
-<p>If the phylogeny is unknown or ambiguous, you are still able run Ragout assuming
-the &quot;star&quot; phylogeny and specifying the evolutionary distance between
-target and references (which is easier to find out):</p>
-<pre><code>.tree = (target,ref1:0.1,ref2:0.05,ref3:0.003);</code></pre>
-<h2>Useful scripts</h2>
+<p>If the phylogeny is unknown or ambiguous, you are still able run 
+Ragout assuming the &quot;star&quot; phylogeny and specifying the evolutionary
+distance between target and references (which is easier to find out):</p>
+<pre><code>.tree = (target, ref1:0.1, ref2:0.05, ref3:0.003);
+</code></pre><h3 id="circular-genomes">Circular genomes</h3>
+<p>If you are working with circular genomes (like bacterial ones) it is 
+recommended to set corresponding parameter in recipe file (see previous
+seqction). This would generate some extra adjacencies which could 
+be useful.</p>
+<h3 id="reference-genome-in-draft-form">Reference genome in draft form</h3>
+<p>Ragout can use even a draft assembly (contigs/scaffolds) as reference 
+sequences. If so, you should specify it in recipe file (see previous 
+section).</p>
+<h2 id="synteny-backends">Synteny backends</h2>
+<p>Ragout have three different options for synteny block decomposition:</p>
+<ul>
+<li>Decompoition with <em>Sibelia</em></li>
+<li>Decomposition with <em>progressiveCactus</em></li>
+<li>Use of external local multiple sequence alignment (in <em>MAF</em> format)</li>
+</ul>
+<p>You can choose between backends by specifying --synteny (-s) option.
+If you use <em>Sibelia</em> or <em>progressiveCactus</em>, you should specify separate
+<em>FASTA</em> file for each input genome, while if you work with <em>MAF</em>, you
+should set only a path to <em>MAF</em> itself and a path to targset&#39;s <em>FASTA</em>
+(see below).</p>
+<h3 id="sibelia">Sibelia</h3>
+<p>&quot;Sibelia&quot; option is set by default and is recommended for small genomes
+(like bacterial ones).</p>
+<h3 id="progressivecactus">progressiveCactus</h3>
+<p>&quot;progressiveCactus&quot; can be used for bigger genomes, up to multuple 
+mammalian species. Please note, that current implementation is still 
+experimental. The tool also should be properly installed. Do not forget 
+to mask repeats (with RepeatMasker, for instance) before applying 
+<em>progressiveCactus</em> to genomes with a big fraction of repetitive sequences.</p>
+<h3 id="local-alignment-in-maf-format">Local alignment in <em>MAF</em> format</h3>
+<p>If you already have a local multiple alignment, you also can use it for
+synteny blocks decomposition. Alignment should be in <em>MAF</em> format and 
+sequence names should follow UCSC notation:</p>
+<pre><code>genome_name.sequence_name
+</code></pre><p>In case you are working with <em>MAF</em> input you should not specify <em>FASTA</em>
+files for references. All you need is to set <em>FASTA</em> for target genome 
+(which will be used for output generation and refinement).</p>
+<h2 id="refinement-with-assembly-graph">Refinement with assembly graph</h2>
+<p>Ragout uses assembly (overlap) graph to incorporate very short / repetitive
+contigs into assembly. First, this graph is reconstructed by overlapping
+input contigs/scaffolds (see Sequence data seqction for requirements).
+Then ragout scaffolds which are already available are being &quot;threaded&quot;
+through this graph to find the true &quot;genome path&quot;.</p>
+<p>This procedure:</p>
+<ul>
+<li>Increases number of conitgs in output scaffolds</li>
+<li>Improves estimation of distances between contigs (will be filled with Ns)</li>
+</ul>
+<p>However, sometimes the assembly graph is not accurate: some adjacencies
+between contigs could be missing and on the other hand, there also might
+be some false-positive adjacencies. This may lead to some incorrectly inserted
+contigs. </p>
+<p>For good assemblies (with reasonable coverage, read length etc.) the fraction
+of such errors should be very small or even zero. And even they exist,
+they are &quot;local&quot; and do not violate the genome structure (probably, most
+of them even will not be detected as missassembles by quality assesment
+tools like Quast).</p>
+<p>As this step may take a lot of time for assemblies with big number of contigs,
+you may skip it by specifying &quot;--no-refine&quot; option.</p>
+<h2 id="useful-scripts">Useful scripts</h2>
 <p>Scripts are located in &quot;scripts&quot; directory</p>
 <p><strong>verify-order.py:</strong></p>
-<p>Tests the correctness of the infered order of contigs if a closely related reference
-is available. First, contigs should be mapped on this reference using <em>nucmer</em> software:</p>
-<pre><code>nucmer --maxmatch --coords reference contigs</code></pre>
-<p>Then run the script with the obtained &quot;coords&quot; file:</p>
-<pre><code>scripts/verify-order.py nucmer_coords ord_file</code></pre>
+<p>Tests the correctness of the infered contigs order if a &quot;true&quot; reference
+is available. First, contigs should be mapped on that reference using 
+<em>nucmer</em> software:</p>
+<pre><code>nucmer --maxmatch --coords reference contigs
+</code></pre><p>Then run the script with the obtained &quot;coords&quot; file:</p>
+<pre><code>scripts/verify-order.py nucmer_coords ord_file
+</code></pre>
 
         </section>
 
