--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ however it also contains an experimental support of mamalian-scaled ones.</p>
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Latest version: 1.0 (Aug 08 2014)</p>
+<p>Latest version: 1.1 (22 Mar 2015)</p>
 
 <p>Read detailed installation instructions <em><a href="install.html">here</a></em>.</p>
 
@@ -68,14 +68,10 @@ however it also contains an experimental support of mamalian-scaled ones.</p>
 <a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
 
 <ul>
-<li>Mikhail Kolmogorov (St. Petersburg University of the Russian Academy of
-Sciences)</li>
-<li>Son Pham (University of California, San Diego)</li>
-<li>Pavel Avdeyev (St. Petersburg University of the Russian Academy of
-Sciences)</li>
-<li>Dmitry Meleshko (St. Petersburg University of the Russian Academy of
-Sciences)</li>
-</ul><h2>
+<li>Mikhail Kolmogorov (St. Petersburg University of the Russian Academy of Sciences, UCSD)</li>
+<li>Pavel Avdeev (St. Petersburg University of the Russian Academy of Sciences)</li>
+<li>Dmitriy Meleshko (St. Petersburg University of the Russian Academy of Sciences)</li>
+<li>Son Pham (UCSD)</li>
 <a name="citation" class="anchor" href="#citation"><span class="octicon octicon-link"></span></a>Citation</h2>
 
 <p>If you use Ragout for your research, please cite:</p>
@@ -104,10 +100,11 @@ Also, you can send your feedback at <a href="mailto:fenderglass@gmail.com">fende
 <p>We would like to thank:</p>
 
 <ul>
-<li>Nikolay Vyahhi (testing and some useful suggestions)</li>
-<li>Tamara Panesh (art)</li>
+<li>Anna Liosnova (benchmarks and useful suggestions)</li>
+<li>Nikolay Vyahhi (testing and useful suggestions)</li>
 <li>Aleksey Gurevich (testing)</li>
-</ul><h2>
+</ul>
+<h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>Ragout itself is distributed under BSD license, but the package also contains
