--- a/install.html
+++ b/install.html
@@ -35,21 +35,21 @@
 
         <section id="main_content">
         
-<h1 id="installation-instructions-for-ragout">Installation instructions for Ragout</h1>
+<h1 id="installation-instructions-for-ragout">Installation Instructions for Ragout</h1>
 <h2 id="availability">Availability</h2>
 <p>Ragout was tested under Mac OS and Linux. While it should work
 under Windows, we currently do not provide an official support.</p>
-<h2 id="build-requirements">Build requirements</h2>
+<h2 id="build-requirements">Build Requirements</h2>
 <ul>
 <li>C++ compiler with C++0x support (GCC 4.6+ / Clang 3.2+ / Apple Clang 4.2+)</li>
 <li>GNU make / Cmake (for building Sibelia)</li>
 </ul>
-<h2 id="runtime-depenencies">Runtime depenencies</h2>
+<h2 id="runtime-depenencies">Runtime Depenencies</h2>
 <ul>
 <li>Python 2.7</li>
-<li>Sibelia [<a href="http://github.com/bioinf/Sibelia">http://github.com/bioinf/Sibelia</a>] or Progresssive Cactus [<a href="http://github.com/glennhickey/progressiveCactus">http://github.com/glennhickey/progressiveCactus</a>]</li>
+<li>Sibelia [<a href="http://github.com/bioinf/Sibelia">http://github.com/bioinf/Sibelia</a>] or HAL Tools [<a href="https://github.com/glennhickey/hal">https://github.com/glennhickey/hal</a>]</li>
 </ul>
-<h2 id="binary-distribution">Binary distribution</h2>
+<h2 id="binary-distribution">Binary Distribution</h2>
 <p>While we recommend to build Ragout from source on each machine, you also can
 use pre-compiled binaries which are available for Linux and Mac OS from 
 Releases page on Github: <a href="https://github.com/fenderglass/Ragout/releases">https://github.com/fenderglass/Ragout/releases</a></p>
@@ -59,31 +59,27 @@ binary files in &quot;lib&quot; directory. If they exist - you have obtained a b
 version, otherwise it is source.</p>
 <h2 id="building">Building</h2>
 <ol>
-<li><p>To build Ragout native modules, type:</p>
+<li>To build Ragout native modules, type:
 <pre><code> make
 </code></pre></li>
-<li><p>To build and install Sibelia, use:</p>
+<li>To build and install Sibelia, use:
 <pre><code> python scripts/install-sibelia.py
 </code></pre></li>
 </ol>
-<p>If you already have Sibelia installed, you can skip second step.</p>
-<p>After this, you can test your installation by running:</p>
-<pre><code>python ragout.py --help
-</code></pre><p>If no errors occured, installation was successful and you can start using Ragout!</p>
-<h2 id="progressivecactus">progressiveCactus</h2>
-<p>Ragout can use both Sibelia and Progressive Cactus for synteny block decomposition.
-Cactus support is still in early stage, however you already can try it with genomes,
-that are too big for Sibelia.</p>
-<p>First, download and build Progressive Cactus: <a href="https://github.com/glennhickey/progressiveCactus">https://github.com/glennhickey/progressiveCactus</a>
-Then set &quot;CACTUS_INSTALL&quot; environment variable pointing to Cactus installation directory:</p>
-<pre><code>export CACTUS_INSTALL=path_to_cactus
-</code></pre><h2 id="troubleshooting">Troubleshooting</h2>
-<p>Q: Tons of errors during compilation, possibly with 
+<p>If you already have Sibelia installed or do not need it, 
+you can skip the second step.</p>
+<h2 id="hal-tools">HAL Tools</h2>
+<p>HAL alignment could be used for synteny blocks decomposition instead of Sibelia
+(recommended for large genomes). If you want to use HAL alignment as input,
+you need to install HAL Tools package: <a href="https://github.com/glennhickey/hal">https://github.com/glennhickey/hal</a>.
+Follow the manuals and do not forget to properly set PATH and PYTHONPATH
+environment variables as it is described in them.</p>
+<h2 id="troubleshooting">Troubleshooting</h2>
+<p>Q: Different errors during compilation, possibly with 
 &quot;unrecognized command line option &#39;-std=c++0x&#39;&quot; message:</p>
 <p>A: Probably your compiler is too old and does not support C++0x. Minimum
 versions of GCC and Clang are mentioned at the beginnig of this documtent.</p>
-<p>Q: &quot;libstdc++.so.6: version `CXXABI_1.3.5&#39; not found&quot; when running
-or something similar</p>
+<p>Q: &quot;libstdc++.so.6: version `CXXABI_1.3.5&#39; not found&quot; or similar error when running</p>
 <p>A: Ensure, that version of libc++ which was used to compile Ragout is similar
 to one which is used to run it. You can specify an extra search path
 to a specific library by setting &quot;LD_LIBRARY_PATH&quot; variable.</p>
